# pviz3

./: CMakeLists.txt  INSTALL.md  INSTALL.txt  LICENSE.txt  README.md  config.bat  config.sh
data/: colorgrid.pviz  cube.txt  cube.txt.vtk  solvent.points.txt.vtk  solvent.pviz  solvent.txt.vtk  solvent.v3.txt  vtkGaussianSplatter.xml
dev/unix/: build.sh
dev/win/: build-all.bat  build-boost.bat  build-comm.bat  build-pviz3.bat  build-vtk.bat  build-zlib.bat  build.bat
etc/: check_dylib.sh  install_name.sh
pvizmodel/: CMakeLists.txt
pvizmodel/demo/: CMakeLists.txt  demo.cpp  solvent.txt
pvizmodel/src/: CMakeLists.txt  pvizcluster.cpp  pvizcluster.h  pvizcomm.cpp  pvizcomm.h  pvizline.cpp  pvizline.h  pvizmodel.cpp  pvizmodel.h  pvizpoint.cpp  pvizpoint.h  pvizutil.h  rapidxml_print.hpp
src/: CMakeLists.txt  CMakeSetup.rc  aboutdialog.cpp  helpdialog.cpp  main.cpp  mainwindow.cpp  mainwindow.h  message.pb.cc  message.pb.h  pviz.qrc  pvizExtractSelectedPolyDataIds.cxx  pvizExtractSelectedPolyDataIds.h  pvizinteractorstyle.cxx  pvizinteractorstyle.h  pvizsync.cxx  pvizsync.h  pvizwidget.cxx  pvizwidget.h  version.h.in  vtkCubeAxes2Actor.cxx  vtkCubeAxes2Actor.h  vtkInteractorStyleRubberBand2Pick.cxx  vtkInteractorStyleRubberBand2Pick.h
src/Icons/: pviz.icns
src/Resources/: Info.plist
src/UI/: MainControlsToolbar.ui  MainWindow.ui  aboutdialog.ui  helpdialog.ui
